tests/NormalTests/paczka2/big_fuzzy/21250849.err
Error in line 14: bV3iN4n5GU A796 134,7
Error in line 21: HiGlij0v A405 88,1
Error in line 48: WbTYudZcl S291 37,5
Error in line 51: WbTYudZcl A295 24,9
Error in line 60: WbTYudZcl A796 96,5
Error in line 58: zwQ2fJ A796 6,5
Error in line 63: zwQ2fJ A295 58,2
Error in line 62: WbTYudZcl A405 89,9
Error in line 78: bV3iN4n5GU S29
Error in line 79:  
Error in line 80: 27,9
Error in line 77: bV3iN4n5GU S291 39,1
Error in line 86: BEVjgTrr A295 53,2
Error in line 91: zwQ2fJ A796 85,6
Error in line 101: 0Sn5d S291 100,0
Error in line 112: BEVjgTrr A405 57,9
Error in line 116: HiGlij0v S291 30,5
Error in line 123: BEVjgTrr^A796^359,8
Error in line 73: A405 A295 245,1
Error in line 125: 0Sn5d A405 22,7
Error in line 135: A405 A295 24,2
Error in line 129: BEVjgTrr A796 87,8
Error in line 144: BEVjgTrr S291 386,73
Error in line 142: WbTYudZcl S291 5,7
Error in line 141: BEVjgTrr S291 92,2
Error in line 155: zwQ2fJ A295 86,9
Error in line 156: HiGlij0v A796 50,2
Error in line 167: BEVjgTrr A405 56,91
Error in line 161: HiGlij0v A405 71,7
Error in line 173: A405 A796 77,3
Error in line 184: A405 A405 34,7
Error in line 190: zwQ2fJ A796 3,6
Error in line 196: A405 S291 64,10
Error in line 193: A405 S291 42,1
Error in line 194: zwQ2fJ A405 9,9
Error in line 214: HiGlij0v S291 95,0
Error in line 222: zwQ2fJ A796 258,8
Error in line 230: HiGlij0v A796 54,7
Error in line 232: bV3iN4n5GU A295 0,9
Error in line 236: HiGlij0v A405 97,2
Error in line 238: HiGlij0v A295 74,1
Error in line 246: A405 A295 7,K
Error in line 244: A405 A796 64,6
Error in line 245: 0Sn5d A295 65,5
